5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1723_2506.log
== SUBMITION (2019-05-14 11:35:37) 
-- CODE:
qt = int(input("no inicial de tambaquis: "))
pc = int(input("percentual: "))
qr = int(input("quantidade retirada: "))

ano = 0
cap = 12000

while (qt < cap) and (qt > 0):
	ql = ql + (ql*(pc/100)) - qr	
	ano = ano + 1
	
if (qt < 0):
	print("EXTINCAO")
if(ql > cap):
	print("LIMITE")

print(ano)
-- EXECUTION TIME:
0.133404
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2506/main.py", line 9, in <module>
    ql = ql + (ql*(pc/100)) - qr	
NameError: name 'ql' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:35:57) 
-- CODE:
qt = int(input("no inicial de tambaquis: "))
pc = int(input("percentual: "))
qr = int(input("quantidade retirada: "))

ano = 0
cap = 12000

while (qt < cap) and (qt > 0):
	ql = ql + (ql*(pc/100)) - qr	
	ano = ano + 1
	
if (qt < 0):
	print("EXTINCAO")
if(ql > cap):
	print("LIMITE")

print(ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ql = ql + (ql*(pc/100)) - qr	
NameError: name 'ql' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:37:01) 
-- CODE:
qt = int(input("no inicial de tambaquis: "))
pc = int(input("percentual: "))
qr = int(input("quantidade retirada: "))

ano = 0
cap = 12000

while (qt < cap) and (qt > 0):
	qt = qt + (qt*(pc/100)) - qr	
	ano = ano + 1
	
if (qt < 0):
	print("EXTINCAO")
if(qt > cap):
	print("LIMITE")

print(ano)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:37:17) 
-- CODE:
qt = int(input("no inicial de tambaquis: "))
pc = int(input("percentual: "))
qr = int(input("quantidade retirada: "))

ano = 0
cap = 12000

while (qt < cap) and (qt > 0):
	qt = qt + (qt*(pc/100)) - qr	
	ano = ano + 1
	
if (qt < 0):
	print("EXTINCAO")
if(qt > cap):
	print("LIMITE")

print(ano)
-- EXECUTION TIME:
0.149895
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
